--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,131 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "PA1_template"
+output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-## Loading and preprocessing the data
+## Loading and preprocessing the data 
+``` {R Load data}
+url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+destfile <- "step_data.zip"
+download.file(url, destfile)
+unzip(destfile)
+activity <- read.csv("activity.csv", sep = ",")
 
+```
+Taking a look at the structure of the data
+```{R Peak}
+head(activity[which(!is.na(activity$steps)),])
+names(activity)
+str(activity)
 
+```
 
-## What is mean total number of steps taken per day?
+## What is mean total number of steps taken per day? 
+Let's make a histogram plot
+```{R Q2}
+library(reshape2)
+activity_melt <- melt(activity[which(!is.na(activity$steps)), ], id.vars = c("date", "interval"))
+head(activity_melt)
+steps_sum <- dcast(activity_melt, date ~ variable, sum)
+head(steps_sum)
+summary(steps_sum$steps)
 
-
+hist(steps_sum$steps, main = "Total steps taken per day",
+     xlab = "Total steps per day", ylab = "Days", 
+     breaks = 10)
+abline(v = mean(steps_sum$steps), lty = 1, lwd = 2)
+abline(v = median(steps_sum$steps), lty = 2, lwd = 2, col = "blue")
+legend(x = "topright", c("Mean", "Median"), col = c("blue", "black"),       lty = c(1, 2), lwd = c(2, 2))
+```
 
 ## What is the average daily activity pattern?
+Let's make a Time series plot
+``` {R Q3}
+stepsmeaninterval <- dcast(activity_melt, interval ~ variable, mean, na.rm = TRUE)
+head(stepsmeaninterval)
+plot(stepsmeaninterval$interval, stepsmeaninterval$steps, ty = "l", 
+     xlab = "Interval", ylab = "Average steps", main = "Average steps taken")
+maxsteps_interval <- stepsmeaninterval$interval[which.max(stepsmeaninterval$steps)]
+maxsteps_interval
+```
 
+## Imputing missing values 
+LetReplace the missing data with the average of the other days
+```{R Q4 Explore}
+activity2 <- split(activity, activity$interval)
+activity2 <- lapply(activity2, function(x) {
+        x$steps[which(is.na(x$steps))] <- mean(x$steps, na.rm = TRUE)
+        return(x)
+})
+activity2 <- do.call("rbind", activity2)
+row.names(activity2) <- NULL
 
+activity2 <- split(activity2, activity2$date)
+df <- lapply(activity2, function(x) {
+        x$steps[which(is.na(x$steps))] <- mean(x$steps, na.rm = TRUE)
+        return(x)
+})
+activity2 <- do.call("rbind", activity2)
+row.names(activity2) <- NULL
 
-## Imputing missing values
+library(reshape2)
+activity_melt2 <- melt(activity2, id.vars = c("date", "interval"))
+steps_sum <- dcast(activity_melt2, date ~ variable, sum, na.rm = TRUE)
 
+hist(steps_sum$steps, main = "Total steps taken per day (missing val imputed)",
+     xlab = "Total steps per day", ylab = "Days", 
+     breaks = 10)
+abline(v = mean(steps_sum$steps), lty = 1, lwd = 2)
+abline(v = median(steps_sum$steps), lty = 2, lwd = 2, col = "blue")
+legend(x = "topright", c("Mean", "Median"), col = c("blue", "black"), lty = c(2, 1), lwd = c(2, 2))
 
+sum(is.na(activity$steps))
+sum(is.na(activity$steps))*100/nrow(activity) # Percentage of rows with missing values
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
+``` {R Q5}
+library(lubridate)
+weekends <- which(weekdays(as.Date(activity2$date)) == "Saturday" |
+              weekdays(as.Date(activity2$date)) == "Sunday")
+weekdays <- which(weekdays(as.Date(activity2$date)) != "Saturday" &
+              weekdays(as.Date(activity2$date)) != "Sunday")
+temp <- c(rep("a", length(activity2)))
+temp[weekends] <- "weekend"
+temp[weekdays] <- "weekday"
+length(temp)
+names(temp) <- "day"
+activity2 <- cbind(activity2, temp)
+names(activity2)[4] <- "day"
+
+activity2split <- split(activity2, activity2$day)
+stepsmean_interval <- lapply(activity2split, function(x) {
+        temp <- aggregate(x$steps, list(x$interval), mean)
+        names(temp) <- c("interval", "steps")
+        return(temp)
+})
+
+
+stepsmean_interval <- do.call("rbind", stepsmean_interval)
+weekdays <- grep("weekday" ,row.names(stepsmean_interval))
+weekends <- grep("weekend" ,row.names(stepsmean_interval))
+temp <- c(rep("a", length(stepsmean_interval$steps)))
+temp[weekdays] <- "weekdays"
+temp[weekends] <- "weekends"
+stepsmean_interval <- cbind(stepsmean_interval, temp)
+row.names(stepsmean_interval) <- NULL
+names(stepsmean_interval)[3] <- "day"
+head(stepsmean_interval)
+tail(stepsmean_interval)
+
+library(ggplot2)
+ggplot(stepsmean_interval, aes(interval, steps)) + geom_line() + facet_grid(day ~ .) 
+
+stepsdatamelt <- melt(stepsmean_interval, id.vars = c("interval", "day"))
+dcast(stepsdatamelt, day ~ variable, mean)
+```
+
